argocd/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    app: website
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: website
